--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
 OPENAI_API_KEY=
-NUMBER=628978514363
-OWNER_NUMBER=6285870975397
+NUMBERS=6282172481471,6285870975397
+
+CRUSH_NUMBER=6282172481471
+CRUSH_NAME=Ryan
+
+SLEEP_START=4
+SLEEP_END=11
+
+WORKING_START=23
+WORKING_END=3
+
+STATUS_TIME=16
+STATUS_DELAY=3
+
+CHAT_MIN=14
+CHAT_MAX=20
