--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-OPENAI_API_KEY=
+# OPENAI_API_KEY=
+OPENAI_URL=http://127.0.0.1:5000/
+EXPRESS_HOST=0.0.0.0
+EXPRESS_PORT=8080
+EXPRESS_URL=http://localhost:8080/
+
 NUMBERS=6282172481471,6285870975397
 
 CRUSH_NUMBER=6282172481471
