--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,148 @@
-websocket-client
-requests
-tls-client
-pypasser
-names
-colorama
-curl_cffi
-aiohttp
-flask
-flask_cors
-streamlit
-selenium
-fake-useragent
-twocaptcha
-streamlit-chat@https://github.com/AI-Yash/st-chat/archive/refs/pull/24/head.zip
-pydantic
-pymailtm
-Levenshtein
-retrying
-mailgw_temporary_email
-pycryptodome
-random-password-generator
-numpy>=1.22.2 # not directly required, pinned by Snyk to avoid a vulnerability
-tornado>=6.3.2 # not directly required, pinned by Snyk to avoid a vulnerability
-PyExecJS
-browser_cookie3
+absl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==5.0.1
+aniso8601==9.0.1
+annotated-types==0.5.0
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+browser-cookie3==0.19.1
+cachetools==5.3.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+contourpy==1.1.0
+curl-cffi==0.5.7
+cycler==0.11.0
+decorator==5.1.1
+docopt==0.6.2
+exceptiongroup==1.1.2
+fake-useragent==1.1.3
+filelock==3.12.2
+Flask==2.3.2
+Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+flatbuffers==23.5.26
+fonttools==4.40.0
+frozenlist==1.3.3
+fsspec==2023.6.0
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.21.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.56.0
+gunicorn==20.1.0
+h11==0.14.0
+h5py==3.9.0
+huggingface-hub==0.15.1
+idna==3.4
+importlib-metadata==6.7.0
+itsdangerous==2.1.2
+jax==0.4.13
+Jinja2==3.1.2
+jsonschema==4.17.3
+keras==2.12.0
+kiwisolver==1.4.4
+Levenshtein==0.21.1
+libclang==16.0.0
+lz4==4.3.2
+MailGw-Temporary-Email==0.0.2
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+mdurl==0.1.2
+ml-dtypes==0.2.0
+mpmath==1.3.0
+multidict==6.0.4
+names==0.3.0
+networkx==3.1
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==23.1
+pandas==2.0.3
+Pillow==9.5.0
+protobuf==4.23.3
+pyarrow==12.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodome==3.18.0
+pycryptodomex==3.18.0
+pydantic==2.0
+pydantic_core==2.0.1
+pydeck==0.8.1b0
+pydub==0.25.1
+PyExecJS==1.5.1
+Pygments==2.15.1
+pymailtm==1.1.1
+Pympler==1.0.1
+pyparsing==3.1.0
+PyPasser==0.0.5
+pyperclip==1.8.2
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+random-password-generator==2.2.0
+random-username==1.0.2
+rapidfuzz==3.1.1
+regex==2023.6.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rich==13.4.2
+rsa==4.9
+safetensors==0.3.1
+scipy==1.11.1
+selenium==4.10.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+SpeechRecognition==3.8.1
+streamlit==1.24.0
+streamlit-chat @ https://github.com/AI-Yash/st-chat/archive/refs/pull/24/head.zip#sha256=018c7b60a8a200eb23394ea309ced518f36c446612f74c788c309526a124eeba
+sympy==1.12
+tenacity==8.2.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.1
+tensorflow-cpu==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+tls-client==0.2.1
+tokenizers==0.13.3
+toml==0.10.2
+toolz==0.12.0
+torch==2.0.1
+tornado==6.3.2
+tqdm==4.65.0
+transformers==4.30.2
+trio==0.22.1
+trio-websocket==0.10.3
+TwoCaptcha==0.0.1
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==1.26.16
+validators==0.20.0
+watchdog==3.0.0
+websocket-client==1.6.1
+Werkzeug==2.3.6
+wrapt==1.14.1
+wsproto==1.2.0
+yarg==0.1.9
+yarl==1.9.2
+zipp==3.15.0
