Add Natan number

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ EXPRESS_HOST=0.0.0.0
 EXPRESS_PORT=8080
 EXPRESS_URL=http://localhost:8080/
 
-NUMBERS=6282172481471,6285870975397
+NUMBERS=6282172481471,6285870975397,6289676191539
 
 CRUSH_NUMBER=6282172481471
 CRUSH_NAME=Ryan
