--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ OPENAI_URL=http://127.0.0.1:5000/
 EXPRESS_HOST=0.0.0.0
 EXPRESS_PORT=8080
 EXPRESS_URL=http://localhost:8080/
+FFMPEG_PATH=./ffmpeg/bin/ffmpeg.exe
 
 NUMBERS=6282172481471,6285870975397,6289676191539
 
