--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # OPENAI_API_KEY=
-OPENAI_URL=http://127.0.0.1:5000/
+OPENAI_URL=http://gpt.ancritbat.my.id/
 EXPRESS_HOST=0.0.0.0
-EXPRESS_PORT=8080
-EXPRESS_URL=http://localhost:8080/
-FFMPEG_PATH=./ffmpeg/bin/ffmpeg.exe
+EXPRESS_PORT=80
+EXPRESS_URL=http://bot.ancritbat.my.id/
+FFMPEG_PATH=/usr/bin/ffmpeg
 
 NUMBERS=6282172481471,6285870975397,6289676191539
 
@@ -22,4 +22,4 @@ STATUS_DELAY=3
 CHAT_MIN=14
 CHAT_MAX=20
 
-PAINTING_PROMPT=Generate a image generation prompt about a painting of panorama
+PAINTING_PROMPT='Generate a image generation prompt about a painting of panorama'
