--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js index.js",
+    "start": "node index.js",
+    "dev": "nodemon -e js index.js",
     "test": "node test.js"
   },
   "author": "",
