--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # OPENAI_API_KEY=
-OPENAI_URL=http://gpt.ancritbat.my.id/
+OPENAI_URL=https://gpt.ancritbat.my.id/
 EXPRESS_HOST=0.0.0.0
 EXPRESS_PORT=80
 EXPRESS_URL=http://bot.ancritbat.my.id/
