--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,7 +18,8 @@ jobs:
           port: 22
           script: |
             cd ~/ayumi
-            rm -rf db.json .env
+            rm -rf db.json
+            rm -rf .env
             cp .env.example .env
             git pull origin v2
             npm install
