feat: better reading image

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ CHAT_MIN=14
 CHAT_MAX=20
 
 PAINTING_PROMPT='Generate a image generation prompt about a painting of panorama'
+PRIVKEY_PATH=/etc/letsencrypt/live/bot.ancritbat.my.id/privkey.pem
+CERT_PATH=/etc/letsencrypt/live/bot.ancritbat.my.id/fullchain.pem
